FIND_PACKAGE(Boost REQUIRED COMPONENTS 
        thread)
include_directories(${Boost_INCLUDE_DIRS})
message("${Boost_INCLUDE_DIRS}")
message("${Boost_LIBRARIES}")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_LIBRARY(ML16 SHARED ML16Lidar.cpp)
ADD_LIBRARY(ML16_STATIC STATIC ML16Lidar.cpp)
SET_TARGET_PROPERTIES(ML16 PROPERTIES VERSION 1.1 SOVERSION 1)
SET_TARGET_PROPERTIES(ML16 PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
SET_TARGET_PROPERTIES(ML16_STATIC PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
SET_TARGET_PROPERTIES(ML16_STATIC PROPERTIES OUTPUT_NAME "ML16")
SET_TARGET_PROPERTIES(ML16 PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(ML16_STATIC PROPERTIES CLEAN_DIRECT_OUTPUT 1)
target_link_libraries(ML16 pthread ${Boost_LIBRARIES})
target_link_libraries(ML16_STATIC pthread ${Boost_LIBRARIES})

INSTALL(TARGETS ML16 ML16_STATIC
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        )

INSTALL(FILES ML16lidar.h DESTINATION include/ML16)
